--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# https://github.com/github/gitignore/blob/master/C.gitignore
+
 # Prerequisites
 *.d
 
@@ -50,3 +52,14 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# cscope with Vim
+cscope.*
+
+#ctags with Vim
+tags
+types_c.taghl
+
+#CtrlP
+ctrlp.root
+
