Add Hands-on BOOT+APP

--- a/hands-on/05_X-CUBE-DSPDEMO/Projects/STM32746G-Discovery/STM32F746_DSPDEMO/SW4STM32/X-CUBE-DSPDEMO/.project
+++ b/hands-on/05_X-CUBE-DSPDEMO/Projects/STM32746G-Discovery/STM32F746_DSPDEMO/SW4STM32/X-CUBE-DSPDEMO/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>X-CUBE-DSPDEMO</name>
+	<name>05_X-CUBE-DSPDEMO</name>
 	<comment></comment>
 	<projects>
 	</projects>
